--- a/src/PgDoc.Serialization/PgDoc.Serialization.csproj
+++ b/src/PgDoc.Serialization/PgDoc.Serialization.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="PgDoc" Version="1.2.2" />
+    <PackageReference Include="System.Linq.Async" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
