--- a/src/PgDoc.Serialization/PgDoc.Serialization.csproj
+++ b/src/PgDoc.Serialization/PgDoc.Serialization.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <VersionPrefix>1.2.2</VersionPrefix>
+    <VersionPrefix>2.0.0-alpha.1</VersionPrefix>
     <Title>PgDoc.Serialization</Title>
     <Description>PgDoc.Serialization is a library for serializing .NET objects to JSON and store them into a PostgreSQL document store.</Description>
     <Authors>Flavien Charlon</Authors>
@@ -19,8 +19,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="PgDoc" Version="2.0.0-alpha.1" />
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="PgDoc" Version="1.2.2" />
     <PackageReference Include="System.Linq.Async" Version="5.0.0" />
   </ItemGroup>
 
